修改项目文件